[package]
name = "dnssd"
version = "0.1.0"
authors = ["johannesd3 <johannesd@outlook.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows = "0.10"

[target.'cfg(windows)'.build-dependencies]
windows = "0.10"

[target.'cfg(any(target_os="macos", target_os="ios"))'.dependencies]
async-dnssd = { git = "https://github.com/stbuehler/rust-async-dnssd" }

[target.'cfg(all(unix, not(target_os="macos"), not(target_os="ios")))'.dependencies]
dbus = "0.9"
dbus-tokio = "0.7"
log = "0.4"
tokio = { version = "1.0", features = ["sync", "macros", "rt"] }

